--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
     "compilerOptions": {
+    "target": "ES2020",
     "module": "commonjs",
+    "outDir": "./dist",
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "sourceMap": true
-    }
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "strict": true,
+    },
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules"]
 }
 
   
